...
          }
          .accessibilityIdentifier("expose_preview_button")

          CircleButton(icon: "square.and.arrow.up", text: "Share") {
            showShareSheet = true
          }
          .accessibilityIdentifier("share_button")
        }
      }
      .padding()

      VStack {
        HStack {
          Spacer()
          CircleButton(icon: "xmark", text: nil) {
            dismiss()
          }
          .accessibilityIdentifier("close_preview_button")
          .padding(.trailing, 20)
          .padding(.top, 50)
        }
        Spacer()
      }
    }
...
